Pinguino IDE 11.0 - Beta 2
--------------------------

xxxxx --, 2014

Features

* Added post_install.py for complete instalation
* Added themes features

Improves

*

Bug Fixes

* Save as not work with unsaved files



##################################################
Pinguino IDE 11.0 - Beta 1
--------------------------

June 7, 2014

Features

* Added language support
* Added Spanish translation by Yeison Cardona
* Added Japanesse translation by "avrin"
* Added backup files

Improves

* Menu sorted
* Dialogues centered on the screen

Bug Fixes

* "clear" and "restart" commands in python shell not add new line
* Recents commands in python shell not saved
* Fixed "close all files" event
* Generate autocompleter for each arch
* Float initialized not recognized by source browser
* "Case sensitive "option in search and replace without effect
* Fixed code generation on graphical mode



##################################################

Pinguino IDE 11.0 - Beta 0
--------------------------

March 28, 2014

Features

* Updated and improved GUI based on Qt via PySide
* Added Python shell
* Added library manager
* Added hex viewer
* Added graphic development interface